# LaTeX-LLM-cleaner

./: .gitignore  LICENSE  README.md  pyproject.toml
src/latex_llm_cleaner/: __init__.py  bibliography.py  cli.py  comments.py  docx.py  figures.py  flatten.py  macros.py  omml.py  pdf.py  pipeline.py  powerpoint.py  summarize.py
tests/: conftest.py  test_bibliography.py  test_comments.py  test_docx.py  test_figures.py  test_flatten.py  test_integration.py  test_macros.py  test_omml.py  test_pdf.py  test_pdf_math.py  test_pdf_ocr.py  test_pptx.py  test_summarize.py
tests/fixtures/: main.tex  refs.bib
tests/fixtures/chapters/: intro.tex  methods.tex
tests/fixtures/figs/: result_summary.txt
