[project]
name = "latex-llm-cleaner"
version = "0.4.0"
description = "Flatten and clean LaTeX files for LLM consumption"
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Andrew Perrault", email = "aperrau@gmail.com" },
]
keywords = ["latex", "llm", "arxiv", "flatten", "clean", "bibliography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = ["bibtexparser>=2.0.0b7"]

[project.urls]
Homepage = "https://github.com/aperrault/LaTeX-LLM-cleaner"
Repository = "https://github.com/aperrault/LaTeX-LLM-cleaner"
Issues = "https://github.com/aperrault/LaTeX-LLM-cleaner/issues"

[project.optional-dependencies]
pdf = ["pymupdf4llm>=0.0.17"]
dev = ["pytest>=7.0"]

[project.scripts]
latex-llm-cleaner = "latex_llm_cleaner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latex_llm_cleaner"]

[tool.hatch.build.targets.sdist]
exclude = ["examples/"]
